@@ -13,6 +13,8 @@ Version 0.0.0.6 2010-11-10
  * Support for saving and loading best individual.
  * Add IF and EVAL type checking as FUNC.
  * Add QUOTE? for QUOTE type ckecking.
+ * Change probability of any FUNC choosing.
+ * Fix error in VM::Environment::Eval with LIST type checking.
 
 Version 0.0.0.5 2010-11-09
  * Fix bugs with choosing best when next can be worst.
